--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,20 @@
   
   <build>
   	<plugins>
+                <plugin>
+                   <groupId>org.codehaus.mojo</groupId>
+                   <artifactId>emma-maven-plugin</artifactId>
+                   <version>1.0-alpha-3</version>
+                   <inherited>true</inherited>
+                </plugin>
   		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-        	<artifactId>maven-compiler-plugin</artifactId>
-        	<version>3.1</version>
-        	<configuration>
+  		   <groupId>org.apache.maven.plugins</groupId>
+        	   <artifactId>maven-compiler-plugin</artifactId>
+        	   <version>3.1</version>
+        	   <configuration>
           		<source>1.6</source>
           		<target>1.6</target>
-        	</configuration>
+        	    </configuration>
   		</plugin>
   	</plugins>
   </build>
