--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>PESTSuite</name>
+  <name>Workshop Demo</name>
   <url>http://www.um.edu.mt/ict/cs/pest</url>
 
   <dependencies>
